fix: contrast issue (accessibility)

--- a/four-card-feature-section-master/style.css
+++ b/four-card-feature-section-master/style.css
@@ -22,7 +22,7 @@ h2 {
 }
 
 p {
-  color: hsl(229, 6%, 66%);
+  color: hsl(230, 8%, 46%);
 }
 
 main {
